Fixed FAQ title misplacement
FAQ title was misaligned and overlaped with the 'what is VAX' box.
I added a simple css grid which I used on the faq page and I put the FAQ title above
the accordion.

--- a/app/assets/stylesheets/scenarioSelect.css.scss
+++ b/app/assets/stylesheets/scenarioSelect.css.scss
@@ -1,10 +1,10 @@
-#accordion {
-  position:absolute;
-  left: 250px;
-  top: 130px;
-  width: 60%;
-  padding-bottom: 20px;
-}
+// #accordion {
+//   position:absolute;
+//   left: 250px;
+//   top: 130px;
+//   width: 60%;
+//   padding-bottom: 20px;
+// }
 
 .scenarioDiv {
   height: 295px;
